--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 .item {
     float: left;
     width: 700px;
-    height: 300px;
+    height: 400px;
     position: relative;
 }
 
@@ -34,23 +34,23 @@
 
 .thumbs {
     float: left;
-    height: 300px;
+    height: 400px;
     background: #000;
     position: relative;
 }
 
 .thumb {
-    height: calc((300px) / 5);
-    opacity: 0.5;
+    width: 300px;
 }
 
 .thumb img {
     width: 100%;
-    height: 100%;
+    height: calc(400px / 5 - 3px) ;
+    opacity: 0.5;
     object-fit: cover;
 }
 
-.thumb.active {
+.thumb > .active {
     border: 2px solid #ccc;
     opacity: 1;
 }
